# modules/auth/account-rest/account-rest-impl/rest-openapi.yaml
@@ -15,10 +15,13 @@ components:
           type: string
         fullName:
           type: string
+        dateOfBirth:
+          type: string
+          format: date
         email:
           type: string
         phoneNumber:
-          type: integer
+          type: string
         address:
           type: string
         password:
